force-app/main/default/objects/Geocode_Request__c/Geocode_Request__c.object-meta.xml
<CustomObject>
    <description>EXAMPLE consumer object. Holds an address to geocode and the result returned by the U.S. Census Geocoder, enqueued through Message_Queue__c. When a match is written, a record-triggered flow runs post-processing.</description>
    <label>Geocode Request</label>
    <nameField>
        <displayFormat>GEO-{00000000}</displayFormat>
        <label>Geocode Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Geocode Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>