force-app/main/default/objects/Geocode_Request__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Text</type>
    <length>120</length>
</CustomField>