force-app/main/default/objects/Geocode_Request__c/fields/Geocode_Response__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Response__c</fullName>
    <label>Geocode Response</label>
    <description>Raw JSON the Census Geocoder returned. Written by CensusGeocodeResponseHandler.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>