force-app/main/default/objects/Geocode_Request__c/fields/Geocode_Status__c.field-meta.xml
<CustomField>
    <fullName>Geocode_Status__c</fullName>
    <label>Geocode Status</label>
    <description>Result of the geocode attempt. The post-processing flow fires when this becomes Matched.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Matched</fullName>
            </value>
            <value>
                <fullName>No_Match</fullName>
                <label>No Match</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>