force-app/main/default/objects/Geocode_Request__c/fields/Geocoded_At__c.field-meta.xml
<CustomField>
    <fullName>Geocoded_At__c</fullName>
    <label>Geocoded At</label>
    <description>Time the geocode response was processed.</description>
    <type>DateTime</type>
</CustomField>