force-app/main/default/objects/Geocode_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <description>Geocoded coordinate returned by the Census Geocoder (latitude = y, longitude = x).</description>
    <type>Location</type>
    <scale>7</scale>
</CustomField>