force-app/main/default/objects/Geocode_Request__c/fields/Matched_Address__c.field-meta.xml
<CustomField>
    <fullName>Matched_Address__c</fullName>
    <label>Matched Address</label>
    <description>Normalized address string the Census Geocoder matched the input to.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>