force-app/main/default/objects/Geocode_Request__c/fields/Post_Processing_Complete__c.field-meta.xml
<CustomField>
    <fullName>Post_Processing_Complete__c</fullName>
    <label>Post Processing Complete</label>
    <description>Set by the Geocode Post Processing flow once a matched location has been handled. Also gates the flow so it does not re-trigger.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>