force-app/main/default/objects/Geocode_Request__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>ZIP</label>
    <type>Text</type>
    <length>20</length>
</CustomField>